
18. Apr. 2002
- vdi/opnwkram - added right screen coordinates to wk info (MAD)

20. Apr. 2002
- vdi/vdimouse.S - used concat routine for screen offset calculation (MAD)
- vdi/vdimouse.S - got mouse working for big screens (MAD)
- vdi/* - got all other routines working for big screens too (MAD)
- vdi/* - remove also many vme10 #ifdefs too (MAD)

20. Apr. 2002
- desk/* - removed/fixed all compiler warnings (MAD)
- vdi/opnwkram - plane number and fonts corr. initialized (MAD)

23. Apr. 2002
- Makefile - fal_$(DESASS) removed on make clean (LVL)
- Fixed text and mouse drawing in VDI color mode (THH).
- Improved the desktop's about dialog (THH).
- bios/startup.S - VBL video mode change written (disabled) (MAD)

24. Apr. 2002
- vdi/* - switched some jmptbl functions to lowercase (MAD)
- vdi/bezier - added raw bezier code from PC GEM's GDOS - not yet working (MAD)

25. Apr. 2002
- vdi/* - switched some more functions to lowercase (MAD)
- vdi/text.c - ripped mono blitting (MAD)

26. Apr. 2002
- vdi/vmouse.c - implemented vex and some other mouse funcs in C (MAD)
- util/miscasm.S - added for smaller asm routines (MAD)
- bdos/umem.c - added missing break in a case that is responsible
                for returning free memory - now everything works OK! (joy)

27. Apr. 2002
- vdi/*.S - changed // back to * inside comments (LVL)
- aes/large.S - moved LSTCPY to util/stringasm.S named strlencpy (LVL)
- aes/optimopt.S - replaced strchk by strcmp (LVL)
- aes/ - removed some calls to scabs by calls to strchr (LVL)
- aes/optimopt.S - replaced bfill by memset, rewrote rest of file (LVL)
- util/stringasm.S - added strlencpy and strchr (LVL)
- aes/gsx2.S - cleaned up, gave better names to labels (LVL)
- updated some todo items (LVL)
- aes/ - wrote comments trying to understand how the processes work (LVL)

28. Apr. 2002
- desk/desk_rsc.c - added string translation using gettext (LVL)
- po/fr.po - updated FR translations to include desktop strings (LVL)
